--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- 🔹 Slider reemplazando el texto -->
             <div class="slider-container">
                 <div class="slide fade">
-                    <img src="img/Slader1.jpg" alt="Imagen 1" class="imgs">
+                    <img src="Img/Slader1.jpg" alt="Imagen 1" class="imgs">
                     <div class="text-container">
                         <h2>MISION</h2>
                         <p>Somos la mejor opción en Sonsonate para disfrutar raspados y minutas únicas, refrescantes y llenas de sabor, creando momentos de alegría con atención de calidad e ingredientes top.</p>
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="slide fade">
-                    <img src="img/Slader2.jpg" alt="Imagen 2" class="imgs">
+                    <img src="Img/Slader2.jpg" alt="Imagen 2" class="imgs">
                     <div class="text-container">
                         <h2>VISION</h2>
                         <p>Ser el lugar favorito de todos en Sonsonate cuando se trata de minutas y raspados, destacando por nuestros sabores únicos, calidad en cada producto y un servicio que siempre deja buenas vibras. Queremos marcar la diferencia y refrescar cada momento con estilo.</p>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="slide fade">
-                    <img src="img/Slader3.jpg" alt="Imagen 3" class="imgs">
+                    <img src="Img/Slader3.jpg" alt="Imagen 3" class="imgs">
                     <div class="text-container">
                         <h2>VALORES</h2>
                         <ul>
