--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="Img/Logo.jpg" alt="Logo de El Minutazo" class="logo">
+        <img src="img/Logo.svg" alt="Logo de El Minutazo" class="logo">
        <button class="menu-toggle" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
         <nav id="navbar">
             <ul>
